--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
-    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.17",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.8.0",
     "bcrypt": "^5.0.1",
@@ -37,6 +37,7 @@
     "handlebars": "^4.7.7",
     "hbs": "^4.1.2",
     "mongoose": "^5.12.13",
+    "multer": "^1.4.2",
     "point-of-view": "^4.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.22",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
